MDEV-18460: Server crashed in strmake / tdc_create_key / THD::create_tmp_table_def_key

When there is a WITH clause we postpone check for tables without
database for later stages when tables in WITH will be defined.
But we should not try to open such tables as temporary tables because
temporary tables always belong to a some database.